# mstone

./: Building.txt  CMakeLists.txt  ChangeLog  INSTALL.txt  NEWS.txt  README.md  README.txt  ToDo  mstone  mstone.git  process
conf/: clean_ifconfig.pl  clean_vmstat.pl  general.wld.in  p4-basic.wld  p4-gen.wld  rcsfake.wld  report-svn-all.pl  reportwiki.pl  sample.wld  svn-gen.wld  svn-ss.wld  svn.wld  svnconf-ssl.txt  svnconf.txt  svnrepo-ssl.wld  test-single.sh  test-svn-load.sh  testutil.sh
doc/: Readme-doc.txt  mstone.html  mstone.odt
src/: CMakeLists.txt  README-p4.txt  README-svn.txt  README.txt  bench.c  bench.h  client.c  errexit.c  files.c  getdist.c  http.c  idle.c  idle.h  imap4.c  mailclient.dsp  mailclient.mak  main.c  multipop.c  p4.cc  parse.c  pish.h  pop3.c  rcs.c  rcs.h  rcsfake.c  smtp.c  ssl.c  svn.c  sysdep.c  sysdep.h  webmail.c  wmap.c  words.c  words.h  xalloc.c
