# Build/install mstone

project(mstone)
#set(CMAKE_VERBOSE_MAKEFILE ON)
#enable_testing()

subdirs(src)

# Nothing builds at this level.  It all about installation.
set(MSTONE_HOME     ${CMAKE_INSTALL_PREFIX}/mstone)
set(ARCH_HOME       ${MSTONE_HOME}/build/${OS_ARCH})
set(BIN_HOME        ${MSTONE_HOME}/bin)
set(CONF_HOME       ${MSTONE_HOME}/conf)
set(DATA_HOME       ${MSTONE_HOME}/data)
set(DOC_HOME        ${MSTONE_HOME}/doc)
set(GNUPLOT_HOME    ${MSTONE_HOME}/gnuplot)
set(PERL_HOME       ${MSTONE_HOME}/perl)

INSTALL(FILES INSTALL.txt LICENSE  LICENSE.npl NEWS.txt README.txt
  DESTINATION ${MSTONE_HOME})

INSTALL(FILES mstone process DESTINATION ${MSTONE_HOME}
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
    GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
)

INSTALL(DIRECTORY bin conf data doc DESTINATION ${MSTONE_HOME}
  PATTERN ".svn" EXCLUDE
  PATTERN "*~" EXCLUDE
  PATTERN "bin/*"
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
      GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
)

#pre-make perl and gnuplot dirs
INSTALL(CODE "
  MAKE_DIRECTORY(\"${GNUPLOT_HOME}\")
  MAKE_DIRECTORY(\"${PERL_HOME}\")
")

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY
  "MStone - Multi-protocol server benchmarking")
SET(CPACK_PACKAGE_VENDOR "Dan Christian")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.txt")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_VERSION_MAJOR "4")
SET(CPACK_PACKAGE_VERSION_MINOR "9")
SET(CPACK_PACKAGE_VERSION_PATCH "4")
if (UNIX)
  SET(CPACK_STRIP_FILES "bin/mailclient")
endif (UNIX)
#include(CPack)
